--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,25 @@
-*{
-    padding: 0;
+* {
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
-.row{
+body {
+    background: url(../src/img/app-bg.jpg);
+}
+
+.row {
     margin-right: -15px;
     margin-left: -15px;
     display: flex;
 }
-.col{
+
+.col {
     padding-left: 15px;
     padding-right: 15px;
 }
-.app{
+
+.app {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -21,17 +27,40 @@
     width: 500px;
     padding: 30px;
     border: 1px solid #000;
+    background: #fff;
+    opacity: 0.9;
+    filter: alpha(opacity=90);
 }
-.btns{
+
+.btns {
     display: flex;
-    list-style:none;
+    list-style: none;
     column-gap: 10px;
 }
-.todo{
+
+.todo {
     display: flex;
     justify-content: space-between;
 }
-.form-todo{
+
+.task-text.done {
+    text-decoration: line-through;
+}
+
+.task-text.imp {
+    color: red;
+}
+
+.form{
     display: flex;
     justify-content: space-between;
+}
+.input-form{
+    padding-left: 10px;
+    max-width: 200px;
+    width: 100%;
+}
+.input-search{
+    padding-left: 10px;
+    height: 40px
 }
